// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches snapshot 1 1`] = `
<p
  data-testid="hide-on-scroll"
  style={
    Object {
      "visibility": undefined,
    }
  }
/>
`;

exports[`Matches snapshot 2 1`] = `
<div
  data-testid="hide-on-scroll"
  style={
    Object {
      "visibility": undefined,
    }
  }
/>
`;
